aruco_detection/ros2_ws/log/build_2023-02-19_14-02-37/tag_detection/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/cam/GitHub/autonomy_2022_23/aruco_detection/ros2_ws/install/tag_detection/lib/python3.10/site-packages/tag_detection/tag_detector.py", line 38
    for coord, t_coord in zip(coords, tag[1:5])
                                               ^
SyntaxError: expected ':'

